# chroma-app

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
.zed/: settings.json
apps/android/: .gitignore  gradle.properties  gradlew  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/it/mtre_consulting/chroma/: ChromaApplication.kt  MainActivity.kt
apps/android/app/src/main/java/it/mtre_consulting/chroma/data/model/: Models.kt
apps/android/app/src/main/java/it/mtre_consulting/chroma/data/store/: AppDataStore.kt
apps/android/app/src/main/java/it/mtre_consulting/chroma/ui/navigation/: AppNavigation.kt
apps/android/app/src/main/java/it/mtre_consulting/chroma/ui/screens/export/: ExportScreen.kt
apps/android/app/src/main/java/it/mtre_consulting/chroma/ui/screens/palettes/: PaletteDetailScreen.kt  PalettesScreen.kt
apps/android/app/src/main/java/it/mtre_consulting/chroma/ui/screens/tokens/: TokensScreen.kt
apps/android/app/src/main/java/it/mtre_consulting/chroma/ui/theme/: Color.kt  Theme.kt
apps/android/app/src/main/java/it/mtre_consulting/chroma/util/: ColorUtils.kt  ExportUtils.kt
apps/android/app/src/main/java/it/mtre_consulting/chroma/viewmodel/: AppViewModel.kt
apps/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
apps/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
apps/android/gradle/: libs.versions.toml
apps/desktop/: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/desktop-linux/: CMakeLists.txt  Cargo.toml  Makefile  resources.gresource.xml
apps/desktop-linux/src/: colour_math.cpp  colour_math.h  colour_math.rs  export_page.cpp  export_page.h  export_page.rs  exporter.cpp  exporter.h  exporter.rs  main.cpp  main.rs  palettes_page.cpp  palettes_page.h  palettes_page.rs  store.cpp  store.h  store.rs  tokens_page.cpp  tokens_page.h  tokens_page.rs  types.h  types.rs  ui_helpers.cpp  ui_helpers.h  ui_helpers.rs
apps/desktop-windows/: App.xaml  App.xaml.cs  Chroma.csproj  Chroma.sln  ColorPickerWindow.xaml  ColorPickerWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  installer.iss
apps/desktop-windows/Converters/: TokenToColorConverter.cs
apps/desktop-windows/Models/: Colour.cs  Palette.cs  Token.cs  TokenGroup.cs  TokenValue.cs
apps/desktop-windows/Services/: ColorService.cs  ExportService.cs  StorageService.cs
apps/desktop-windows/ViewModels/: MainWindowViewModel.cs
apps/desktop/src/: MobileAndroidApp.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/palette/: ColourCard.tsx  PalettePanel.tsx
apps/desktop/src/components/picker/: ColourPicker.tsx
apps/desktop/src/components/tokens/: TokenPanel.tsx
apps/desktop/src/hooks/: usePlatform.ts
apps/desktop/src/lib/: export.ts
apps/desktop/src/store/: paletteStore.ts  tokenStore.ts
apps/ios/: project.yml
apps/ios/Chroma.xcodeproj/: project.pbxproj
apps/ios/Chroma/App/: ChromaApp.swift  ContentView.swift
apps/ios/Chroma/Data/: AppViewModel.swift  DataStore.swift  Models.swift
apps/ios/Chroma/Navigation/: AppNavigation.swift
apps/ios/Chroma/Resources/: Info.plist
apps/ios/Chroma/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
apps/ios/Chroma/Screens/Export/: ExportView.swift
apps/ios/Chroma/Screens/Palettes/: PaletteDetailView.swift  PalettesView.swift
apps/ios/Chroma/Screens/Tokens/: TokensView.swift
apps/ios/Chroma/Utils/: Color+Hex.swift  ColourUtils.swift  ExportUtils.swift
apps/ios/ChromaTests/: ChromaTests.swift
apps/mobile/: .eslintrc.js  app.json  package-lock.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/app/(tabs)/: _layout.tsx  export.tsx  tokens.tsx
apps/mobile/app/(tabs)/palettes/: [id].tsx  _layout.tsx  index.tsx
apps/mobile/src/components/: M3.tsx
packaging/arch/: PKGBUILD  chroma.desktop
packaging/arch-git/: PKGBUILD
src/: App.tsx  MobileAndroidApp.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/export/: ExportPanel.tsx
src/components/mobile/android/: BottomNav.tsx  ColoursScreen.tsx  ExportScreen.tsx  PaletteListScreen.tsx  TokensScreen.tsx
src/components/palette/: ColourCard.tsx  PalettePanel.tsx
src/components/picker/: ColourPicker.tsx
src/components/tokens/: TokenPanel.tsx
src/hooks/: usePlatform.ts
src/lib/: colour.ts  export.ts
src/store/: paletteStore.ts  tokenStore.ts
src/types/: index.ts
